--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8">
 <title>CONTACT - Zara Hapiz</title>
-<link rel="icon" type="image/x-icon" href="ZARA HAPIZ LOGO SIMPLE V2.png">
+<link rel="icon" type="image/x-icon" href="ZARA HAPIZ LOGO - SMALL.png">
 <link rel="stylesheet" href="https://use.typekit.net/oag6cqw.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,25 +12,34 @@
 <!--CSS CODES-->
 <style>
 	body {
-		font-family: 'neue-haas-grotesk-text', Arial, sans-serif;
+		font-family: "degular", sans-serif;
+		font-weight: 500;
+		font-style: normal;
 		font-size: 1.5em;
-		font-weight: 300;
-		color: #2F2C25;
+		color: #F3F3F3;
 		margin: 35px;
-		background-color: #F5F5F5;
+		background-color: #0A0A0A;
+		background-repeat: repeat-y;
+		background-position: left top;
+  		background-attachment: scroll;
+		background-size: cover;
 		cursor: default;
 	}
 	h1 {
-		font-family: 'roc-grotesk-condensed', Garamond, sans-serif;
-		font-size: 4em;
-		font-weight: 400;
+		font-family: "degular-display", sans-serif;
+		font-weight: 700;
 		font-style: normal;
-		margin: -10px 0 -30px;
-		line-height: 1;
+		font-size: 4em;
+		margin: 10px;
+		line-height: 0.8em;
+		animation-name: titleHover;
+		animation-duration: 3s;
+		animation-iteration-count: 1;
 	}
 	h2 {
 		margin: 0;
-		font-weight: 300;
+		margin-top: 20px;
+		font-weight: 600;
 	}
 	h3 {
 		margin: 10px 0 10px 0;
@@ -38,21 +47,26 @@
 	}
 	h4 {
 		margin: 10px 0 10px 0;
-		font-weight: 300;
+		font-weight: 500;
 		font-size: 1em;
+	}
+	h5 {
+		font-weight: 500;
+		font-size: 0.5em;
+		opacity: 0.7;
 	}
 	::-webkit-scrollbar {
 		width: 10px;
 	}
 	::-webkit-scrollbar-track {
-		background: #2F2C25;
+		background: #08131C;
 	}
 	::-webkit-scrollbar-thumb {
-		background: #9BC4D7;
-		border: 1px solid #2F2C25;
+		background: #F26697;
+		border: 1px solid #08131C;
 	}
 	::-webkit-scrollbar-thumb:hover {
-		background: #A5C497;
+		background: #2346F3;
 	}
 	ul {
 		height: 0px;
@@ -67,30 +81,38 @@
 		color: black;
 		margin: 15px 15px 15px 30px;
 		text-decoration: none;
-		color: #2F2C25;
+		color: #F3F3F3;
 		float: left;
+		transition: color 0.3s, transform 0.3s;
 	}
-	li a:hover {
-		color: #5B5648;
+	ul a:hover {
+		color: #F26697;
+		transform: rotate(10deg);
 	}
 	.active {
-		color: #9BC4D7;
+		color: #2346F3;
+	}
+	@keyframes titleHover {
+		from {opacity: 0;}
+		to {opacity: 1;}
 	}
 	embed {
 		cursor: default;
 	}
 	.ribbon {
 		margin: -35px;
-		font-size: 0.9em;
+		font-size: 0.8em;
 		text-align: center;
-		background-color: #EDC0BE;
-		border-bottom: 1px solid #2F2C25;
+		background-color: #F0B719;
+		border-bottom: 1px solid #08131C;
 		overflow-x: hidden;
+		overflow-y: hidden;
 		height: 38px;
 		font-style: italic;	
 		white-space: nowrap;
 	}
 	.ribbon-text {
+		color: #08131C;
 		font-size: 1.4em;
   		animation: bannermove 10s linear infinite;
  		animation-play-state: running;
@@ -112,82 +134,30 @@
 		-o-animation-play-state:paused;
 		animation-play-state:paused;
 	}
-	.divider {
-		border-bottom: 1px solid #2F2C25;
-		width: auto;
-		margin-left: -35px;
-		margin-right: -35px;
-		margin-bottom: 20px;
-	}
 	footer {
-		color: #8A8883;
+		color: #F3F3F3;
 		text-align: center;
 		font-size: 0.9em;
 	}
-	.pink-bg {
-		background-color: #EDC0BE;
-		margin-top: -20px;
-		width: auto;
-		margin-left: -35px;
-		margin-right: -35px;
-		padding: 40px 70px;
-	}
-	.orange-bg {
-		background-color: #E17A48;
-		margin-top: -20px;
-		width: auto;
-		margin-left: -35px;
-		margin-right: -35px;
-		padding: 40px 70px;
-		color: #F5F5F5;
-	}
-	.yellow-bg {
-		background-color: #E9CB58;
-		margin-top: -20px;
-		width: auto;
-		margin-left: -35px;
-		margin-right: -35px;
-		padding: 40px 70px;
-	}
-	.green-bg {
-		background-color: #A5C497;
-		margin-top: -20px;
-		width: auto;
-		margin-left: -35px;
-		margin-right: -35px;
-		padding: 40px 70px;
-	}
-	.blue-bg {
-		background-color: #9BC4D7;
-		margin-top: -20px;
-		width: auto;
-		margin-left: -35px;
-		margin-right: -35px;
-		padding: 40px 70px;
-	}
-	.black-bg {
-		background-color: #2F2C25;
-		margin-top: -20px;
-		width: auto;
-		margin-left: -35px;
-		margin-right: -35px;
-		padding: 40px 70px;
-		color: #F5F5F5;
-	}
-		.topnav .icon {
+	.topnav .icon {
   		display: none;
+		color: #F3F3F3;
 	}
 	.column {
 		flex: 50%;
+		padding: 0 5px;
 	}
 	.row {
 		display: flex;
 	}
 		/* responsive stuff */
 	@media screen and (max-width: 600px) {
+		html {
+		}
 		body {
 			margin: 35px 10px;
 			overflow-x: hidden;
+			background-position: top center;
 		}
 		h1 {
 			font-size: 15vw;
@@ -222,7 +192,7 @@
 		width: 0px;
 		}
 		.topnav { 
-		background-color: #F5F5F5;
+		background-color: #F3F3F3;
 		}
 		.topnav a {display: none;}
   		.topnav a.icon {
@@ -244,6 +214,13 @@
 			width: "40vw";
 		}
 	}
+	@keyframes imgHover {
+		from {transform: scale(100%);}
+		to {transform:scale(120%);}
+	}
+	.portfolio {
+		cursor: pointer;
+	}
 </style>
 <!--END OF CSS CODES-->
 	
@@ -252,12 +229,12 @@
 <body>
 	<!--HEADER STUFF-->
 	<div class="ribbon"><div class="ribbon-text">
-	THANK YOU FOR VISITING ZARA'S WEBSITE! THANK YOU FOR VISITING ZARA'S WEBSITE!
+	THANK YOU FOR VISITING ZARA'S WEBSITE! THANK YOU FOR VISITING ZARA'S WEBSITE! THANK YOU FOR VISITING ZARA'S WEBSITE
 	</div></div>
 	<br>
 	<ul style="float:left;">
-		<li style="float:left;margin-top:-25px;"><a href="index.html"><img src="ZARA HAPIZ LOGO V2.png" alt="ZH" style="width:90px;height:90px;"></a></li>
-	</ul><ul style="float:right;margin-top:5px;"><div class="topnav" id="myTopnav">
+		<li style="float:left;margin-top:-25px;"><a href="index.html"><img src="ZARA HAPIZ LOGO - LARGE BLACK.png" alt="ZH" style="width:90px;height:90px;"></a></li>
+	</ul><ul style="float:right;margin-top:5px;font-size:1.1em;"><div class="topnav" id="myTopnav">
 		<a href="index.html">home</a>
   		<a href="art gallery.html">art gallery</a>
 		<a href="store.html">store</a>
@@ -267,33 +244,32 @@
   </a></div>
 	</ul>
 	<br><br>
-	<div class="divider"></div>
 	<!--END OF HEADER STUFF-->
 	
 	
 	
-	<div class="black-bg">
-		<h1 style="text-align:center;">
-			Contact </h1>
+		<br><h1 style="text-align:center;color:#F26697">
+			Let me design for you<i>!</i> </h1>
 			<h3 style="text-align:center;">
-			for business purposes:
-		</h3></div>
-	<div class="divider"></div>
-	<div class="yellow-bg">
+			Contact me for business purposes:
+		</h3>
 			<h4 style="text-align:center;"> 
-				e-mail: zara.hapiz@gmail.com
-				<br> Behance: <a href="https://www.behance.net/zarahapiz" style="color:#2F2C25;">Zara Hapiz</a>
+				e-mail me at <i style="color:#F0B719;">zara.hapiz@gmail.com,</i>
+				<br>or message me on Instagram <i style="color:#F0B719;">@zaramysh</i>
+				<br> to hire me!
+				<br><br> check out my portfolio on
+				<br>Behance: <a href="https://www.behance.net/zarahapiz" style="color:#F3F3F3;"><i style="color:#F0B719;">Zara Hapiz</i></a>
+				<br><a href="https://www.behance.net/gallery/169375621/Graphic-Design-Portfolio-2023"><div class="portfolio"><img src="artwork/ZARA'S PORTFOLIO 2023!-2.png" style="width:600px;margin-top:20px;" alt="image failed to load?!"></div></a>
+				<br><br>
 			</h4>
-	</div>
-	<div class="divider"></div>
 	
 	
 	
 	<!--FOOTER STUFF-->
 	<footer>
-		<a href="https://www.instagram.com/zaramysh/"><img src="instagram.png" style="width:30px;opacity:0.8;" alt="Instagram"></a>
-		<a href="https://www.tiktok.com/@zaramysh"><img src="tik-tok.png" style="width:30px;opacity:0.8;" alt="TikTok"></a>
-		<p style="color:#2F2C25;">© Zara Hapiz 2023</p>
+		<a href="https://www.instagram.com/zaramysh/"><img src="instagram.png" style="width:30px;display:inline-block;" alt="Instagram"></a>
+		<a href="https://www.tiktok.com/@zaramysh"><img src="tik-tok.png" style="width:30px;display:inline-block;" alt="TikTok"></a>
+		<p>© Zara Hapiz 2023</p>
 		<p style="font-size:0.7em;">Special thanks to Cikgu Hidayati and Cikgu Rosila, my Computer Science teachers, for helping this website come to life.</p>
 	</footer>
 	<!--END OF FOOTER STUFF-->
