--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8">
 <title>HOME - Zara Hapiz</title>
-<link rel="icon" type="image/x-icon" href="ZARA HAPIZ LOGO SIMPLE V2.png">
+<link rel="icon" type="image/x-icon" href="ZARA HAPIZ LOGO - SMALL.png">
 <link rel="stylesheet" href="https://use.typekit.net/oag6cqw.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,26 +12,35 @@
 <!--CSS CODES-->
 <style>
 	body {
-		font-family: 'neue-haas-grotesk-text', Arial, sans-serif;
+		font-family: "degular", sans-serif;
+		font-weight: 500;
+		font-style: normal;
 		font-size: 1.5em;
-		font-weight: 300;
-		color: #2F2C25;
+		color: #F3F3F3;
 		margin: 35px;
-		background-color: #F5F5F5;
+		background-color: black;
+		background-image: url("ZARA HAPIZ WEBSITE BG.png");
+		background-repeat: repeat-y;
+		background-position: left top;
+  		background-attachment: scroll;
+		background-size: cover;
 		cursor: default;
 	}
 	h1 {
-		font-family: 'roc-grotesk-condensed', Garamond, sans-serif;
-		font-size: 4em;
-		font-weight: 400;
+		font-family: "degular-display", sans-serif;
+		font-weight: 700;
 		font-style: normal;
-		margin: -10px 0 -30px;
-		line-height: 1;
+		font-size: 4em;
+		margin: 10px;
+		line-height: 0.8em;
+		animation-name: titleHover;
+		animation-duration: 3s;
+		animation-iteration-count: 1;
 	}
 	h2 {
 		margin: 0;
 		margin-top: 20px;
-		font-weight: 300;
+		font-weight: 600;
 	}
 	h3 {
 		margin: 10px 0 10px 0;
@@ -39,11 +48,11 @@
 	}
 	h4 {
 		margin: 10px 0 10px 0;
-		font-weight: 300;
+		font-weight: 500;
 		font-size: 1em;
 	}
 	h5 {
-		font-weight: 300;
+		font-weight: 500;
 		font-size: 0.5em;
 		opacity: 0.7;
 	}
@@ -51,14 +60,14 @@
 		width: 10px;
 	}
 	::-webkit-scrollbar-track {
-		background: #2F2C25;
+		background: #08131C;
 	}
 	::-webkit-scrollbar-thumb {
-		background: #9BC4D7;
-		border: 1px solid #2F2C25;
+		background: #F26697;
+		border: 1px solid #08131C;
 	}
 	::-webkit-scrollbar-thumb:hover {
-		background: #A5C497;
+		background: #2346F3;
 	}
 	ul {
 		height: 0px;
@@ -73,30 +82,38 @@
 		color: black;
 		margin: 15px 15px 15px 30px;
 		text-decoration: none;
-		color: #2F2C25;
+		color: #F3F3F3;
 		float: left;
+		transition: color 0.3s, transform 0.3s;
 	}
 	ul a:hover {
-		color: #5B5648;
+		color: #F26697;
+		transform: rotate(10deg);
 	}
 	.active {
-		color: #9BC4D7;
+		color: #2346F3;
+	}
+	@keyframes titleHover {
+		from {opacity: 0;}
+		to {opacity: 1;}
 	}
 	embed {
 		cursor: default;
 	}
 	.ribbon {
 		margin: -35px;
-		font-size: 0.9em;
+		font-size: 0.8em;
 		text-align: center;
-		background-color: #EDC0BE;
-		border-bottom: 1px solid #2F2C25;
+		background-color: #F0B719;
+		border-bottom: 1px solid #08131C;
 		overflow-x: hidden;
+		overflow-y: hidden;
 		height: 38px;
 		font-style: italic;	
 		white-space: nowrap;
 	}
 	.ribbon-text {
+		color: #08131C;
 		font-size: 1.4em;
   		animation: bannermove 10s linear infinite;
  		animation-play-state: running;
@@ -118,82 +135,30 @@
 		-o-animation-play-state:paused;
 		animation-play-state:paused;
 	}
-	.divider {
-		border-bottom: 1px solid #2F2C25;
-		width: auto;
-		margin-left: -35px;
-		margin-right: -35px;
-		margin-bottom: 20px;
-	}
 	footer {
-		color: #8A8883;
+		color: #F3F3F3;
 		text-align: center;
 		font-size: 0.9em;
 	}
-	.pink-bg {
-		background-color: #EDC0BE;
-		margin-top: -20px;
-		width: auto;
-		margin-left: -35px;
-		margin-right: -35px;
-		padding: 40px 70px;
-	}
-	.orange-bg {
-		background-color: #E17A48;
-		margin-top: -20px;
-		width: auto;
-		margin-left: -35px;
-		margin-right: -35px;
-		padding: 40px 70px;
-		color: #F5F5F5;
-	}
-	.yellow-bg {
-		background-color: #E9CB58;
-		margin-top: -20px;
-		width: auto;
-		margin-left: -35px;
-		margin-right: -35px;
-		padding: 40px 70px;
-	}
-	.green-bg {
-		background-color: #A5C497;
-		margin-top: -20px;
-		width: auto;
-		margin-left: -35px;
-		margin-right: -35px;
-		padding: 40px 70px;
-	}
-	.blue-bg {
-		background-color: #9BC4D7;
-		margin-top: -20px;
-		width: auto;
-		margin-left: -35px;
-		margin-right: -35px;
-		padding: 40px 70px;
-	}
-	.black-bg {
-		background-color: #2F2C25;
-		margin-top: -20px;
-		width: auto;
-		margin-left: -35px;
-		margin-right: -35px;
-		padding: 40px 70px;
-		color: #F5F5F5;
-	}
 	.topnav .icon {
   		display: none;
+		color: #F3F3F3;
 	}
 	.column {
 		flex: 50%;
+		padding: 0 5px;
 	}
 	.row {
 		display: flex;
 	}
 		/* responsive stuff */
 	@media screen and (max-width: 600px) {
+		html {
+		}
 		body {
 			margin: 35px 10px;
 			overflow-x: hidden;
+			background-position: top center;
 		}
 		h1 {
 			font-size: 15vw;
@@ -216,6 +181,7 @@
 			font-size: 7vw;
 			line-height: 8vw;
 			overflow: visible;
+			color: #08131C;
 		}
 		.row {
 			display: block;
@@ -228,7 +194,7 @@
 		width: 0px;
 		}
 		.topnav { 
-		background-color: #F5F5F5;
+		background-color: #F3F3F3;
 		}
 		.topnav a {display: none;}
   		.topnav a.icon {
@@ -258,69 +224,64 @@
 <body>
 	<!--HEADER STUFF-->
 	<div class="ribbon"><div class="ribbon-text">
-	THANK YOU FOR VISITING ZARA'S WEBSITE! THANK YOU FOR VISITING ZARA'S WEBSITE!
+	THANK YOU FOR VISITING ZARA'S WEBSITE! THANK YOU FOR VISITING ZARA'S WEBSITE! THANK YOU FOR VISITING ZARA'S WEBSITE
 	</div></div>
 	<br>
 	<ul style="float:left;">
-		<li style="float:left;margin-top:-25px;"><a href="index.html"><img src="ZARA HAPIZ LOGO V2.png" alt="ZH" style="width:90px;height:90px;"></a></li>
-	</ul><ul style="float:right;margin-top:5px;"><div class="topnav" id="myTopnav">
+		<li style="float:left;margin-top:-25px;"><a href="index.html"><img src="ZARA HAPIZ LOGO - LARGE BLACK.png" alt="ZH" style="width:90px;height:90px;"></a></li>
+	</ul><ul style="float:right;margin-top:5px;font-size:1.1em;"><div class="topnav" id="myTopnav">
 		<a class="active" href="index.html">home</a>
   		<a href="art gallery.html">art gallery</a>
 		<a href="store.html">store</a>
 		<a href="contact.html">contact</a>
 		<a href="javascript:void(0);" class="icon" onclick="myFunction()">
-    	<i class="fa fa-bars" style="font-size:7.5vw;"></i>
+    	<i class="fa fa-bars"></i>
   </a></div>
 	</ul>
 	<br><br>
-	<div class="divider"></div>
 	<!--END OF HEADER STUFF-->
 	
 	
 	
-	<div class="yellow-bg">
-		<h1 style="text-align:center;">
-			<i>Welcome</i><br> to my brand-new website!
-		</h1></div>
-	<div class="divider"></div>
-	<div class="blue-bg">
+		<h1>
+			<i>Hi.</i><br>
+			</h1><h1 style="color:#F26697;"> I’m Zara Hapiz,</h1>
+			<h1>a designer + artist.
+		</h1>
+			<p><h2 style="color:#2346F3;">+ programmer!</h2></p>
+		<br><br>
 		<div class="row">
-		<div class="column"><img src="artwork/pear-1.png" width="100%" alt="oh no picture gone :("></div>
+		<div class="column"><img src="artwork/JUGGERNAUT square.png" width="100%" alt="oh no picture gone :(" style="border-radius:5px;border: 2px solid black;"></div>
 		<div class="column">
 			<h1 style="margin-left:50px;">
 			What’s up?
 			</h1><br>
 			<h4 style="text-align:justify;text-justify:inter-word;margin-left:50px;margin-right:50px;">
-			I’m <i>Zara Hapiz</i>, and this is my website, which serves as a vessel for me to <i>dump my artwork</i> and as a personal <i>portfolio</i>.
-			Besides the art gallery, this website itself is already a display of my talent (and hobby)! Yep, I programmed this website myself! Have fun browsing :)</h4>
-		</div></div>
-	</div>
-	<div class="divider"></div>
-	<div class="green-bg">
+				I’m <i style="color:#F0B719;">Zara Hapiz</i>, an artist, graphic designer, programmer, and amateur videographer. I like hip-hop music and Nintendo games.
+			<br>Anyway, this website is one of the displays of my talent, as I programmed this website myself! Have fun browsing &gt;:)
+			<br><p>LISTEN TO SOME TUNES!</p></h4>
+			<iframe style="border-radius:12px;margin-left:40px;margin-top:0;" src="https://open.spotify.com/embed/track/0WSEq9Ko4kFPt8yo3ICd6T?utm_source=generator&theme=0" width="90%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+		</div></div><br>
 		<div class="row">
 			<div class="column">
 				<h1>Latest Project!</h1>
-				<h4 style="margin-top:30px;">Imitation Apple iPhone 15 website
-				<br><a href="https://zaramysh.github.io/apple/" style="color:#2F2C25;">Click me to view!</a>
+				<h4 style="margin-top:30px;text-align:justify;text-justify:inter-word;margin-left:50px;margin-right:50px;"><a href="https://zaramysh.github.io/apple/" style=";color:#08131C;">Imitation Apple iPhone 15 website</a>
 				<br><br>
-				This is a faux Apple website I designed for a future iPhone 15 (which is very much not accurate). 
-				<h5>PHOTOS DO NOT BELONG TO ME!</h5>
-				</h4>
+				This is an imitation Apple website I designed for a <i>future</i> iPhone 15. 
+				<br><i>PHOTOS DO NOT BELONG TO ME!</i></h4>
 			</div>
 			<div class="column">
-				<img src="artwork/iPhone 15 - 1.png" width="100%" alt="oh no picture gone :(">
+				<img src="artwork/iPhone 15 - 1.png" width="100%" alt="oh no picture gone :(" style="border-radius:5px;border:2px solid black;">
 			</div>
 		</div>
-	</div>
-	<div class="divider"></div>
 	
 	
 	
 	<!--FOOTER STUFF-->
-	<footer>
-		<a href="https://www.instagram.com/zaramysh/"><img src="instagram.png" style="width:30px;opacity:0.8;" alt="Instagram"></a>
-		<a href="https://www.tiktok.com/@zaramysh"><img src="tik-tok.png" style="width:30px;opacity:0.8;" alt="TikTok"></a>
-		<p style="color:#2F2C25;">© Zara Hapiz 2023</p>
+	<footer><br><br>
+		<a href="https://www.instagram.com/zaramysh/"><img src="instagram.png" style="width:30px;" alt="Instagram"></a>
+		<a href="https://www.tiktok.com/@zaramysh"><img src="tik-tok.png" style="width:30px;" alt="TikTok"></a>
+		<p>© Zara Hapiz 2023</p>
 		<p style="font-size:0.7em;">Special thanks to Cikgu Hidayati and Cikgu Rosila, my Computer Science teachers, for helping this website come to life.</p>
 		<embed><a href="https://acadooghostwriter.com/" style="opacity: 0; cursor:default;">https://acadooghostwriter.com</a> <script type="text/javascript" src="https://www.freevisitorcounters.com/auth.php?id=1d304043b64be22a3a5ba7a5a465aa9a5c4460cf"></script>
 <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1019120/t/5"></script>
@@ -329,13 +290,33 @@
 	<!--JAVASCRIPT SCRIPTS-->
 	<script>
 	function myFunction() {
-		var x = document.getElementById("myTopnav");
-	    if (x.className === "topnav") {
-			x.className += " responsive";
-	  	} else {
-			x.className = "topnav";
-	  	}
+  		var x = document.getElementById("myTopnav");
+  		if (x.className === "topnav") {
+    		x.className += " responsive";
+  		} else {
+    		x.className = "topnav";
+  		}
 	}
+		//const observer = new IntersectionObserver(entries => {
+	  	// Loop over the entries
+	  	//entries.forEach(entry => {
+		// If the element is visible
+		//if (entry.isIntersecting) {
+		  // Add the animation class
+		//  entry.target.classList.add("titleHover");
+		//}
+		//});
+		//});
+
+		//observer.observe(document.querySelector(".h1"));
+		
+		const funFacts = [
+			"FACT #1: AUSTRALIA IS WIDER THAN THE MOON."
+			"FACT #2: SUDAN HAS MORE PYRAMIDS THAN ANY COUNTRY IN THE WORLD."
+			"FACT #3: THE WORLD’S OLDEST WOODEN WHEEL HAS BEEN AROUND FOR MORE THAN 5000 YEARS."
+			"FACT #4:"
+			"FACT #5:"
+		]
 	</script>
 </body>
 </html>
