--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 		display: flex;
 	}
 		/* responsive stuff */
-	@media screen and (max-width: 600px) {
+		@media screen and (max-width: 650px) {
 		html {
 		}
 		body {
@@ -260,12 +260,14 @@
 				I’m <i style="color:#F0B719;">Zara Hapiz</i>, an artist, graphic designer, programmer, and amateur videographer. I like hip-hop music and Nintendo games.
 			<br>Anyway, this website is one of the displays of my talent, as I programmed this website myself! Have fun browsing &gt;:)
 			<br><p>LISTEN TO SOME TUNES!</p></h4>
-			<iframe style="border-radius:12px;margin-left:40px;margin-top:0;" src="https://open.spotify.com/embed/track/0WSEq9Ko4kFPt8yo3ICd6T?utm_source=generator&theme=0" width="90%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+			<iframe style="border-radius:12px;margin-left:40px;margin-top:0;" src="https://open.spotify.com/embed/track/0PyJRNmJvJJ5OmffwQf5we?utm_source=generator" width="90%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+			<!--<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/54FJWt8YIA1IHjmUxuDxwi?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+			0WSEq9Ko4kFPt8yo3ICd6T?utm_source=generator&theme=0-->
 		</div></div><br>
 		<div class="row">
 			<div class="column">
 				<h1>Latest Project!</h1>
-				<h4 style="margin-top:30px;text-align:justify;text-justify:inter-word;margin-left:50px;margin-right:50px;"><a href="https://zaramysh.github.io/apple/" style=";color:#08131C;">Imitation Apple iPhone 15 website</a>
+				<h4 style="margin-top:30px;text-align:justify;text-justify:inter-word;margin-left:50px;margin-right:50px;"><a href="https://zaramysh.github.io/apple/" style="color:#08131C;background-color:#F3F3F3;">Imitation Apple iPhone 15 website</a>
 				<br><br>
 				This is an imitation Apple website I designed for a <i>future</i> iPhone 15. 
 				<br><i>PHOTOS DO NOT BELONG TO ME!</i></h4>
@@ -290,12 +292,12 @@
 	<!--JAVASCRIPT SCRIPTS-->
 	<script>
 	function myFunction() {
-  		var x = document.getElementById("myTopnav");
-  		if (x.className === "topnav") {
-    		x.className += " responsive";
-  		} else {
-    		x.className = "topnav";
-  		}
+		var x = document.getElementById("myTopnav");
+	    if (x.className === "topnav") {
+			x.className += " responsive";
+	  	} else {
+			x.className = "topnav";
+	  	}
 	}
 		//const observer = new IntersectionObserver(entries => {
 	  	// Loop over the entries
@@ -310,13 +312,13 @@
 
 		//observer.observe(document.querySelector(".h1"));
 		
-		const funFacts = [
-			"FACT #1: AUSTRALIA IS WIDER THAN THE MOON."
-			"FACT #2: SUDAN HAS MORE PYRAMIDS THAN ANY COUNTRY IN THE WORLD."
-			"FACT #3: THE WORLD’S OLDEST WOODEN WHEEL HAS BEEN AROUND FOR MORE THAN 5000 YEARS."
-			"FACT #4:"
-			"FACT #5:"
-		]
+		//const funFacts = [
+		//	"FACT #1: AUSTRALIA IS WIDER THAN THE MOON."
+		//	"FACT #2: SUDAN HAS MORE PYRAMIDS THAN ANY COUNTRY IN THE WORLD."
+		//	"FACT #3: THE WORLD’S OLDEST WOODEN WHEEL HAS BEEN AROUND FOR MORE THAN 5000 YEARS."
+		//	"FACT #4:"
+		//	"FACT #5:"
+		//]
 	</script>
 </body>
 </html>
