--- a/art gallery.html
+++ b/art gallery.html
@@ -152,7 +152,7 @@
 		display: flex;
 	}
 		/* responsive stuff */
-	@media screen and (max-width: 600px) {
+	@media screen and (max-width: 650px) {
 		html {
 		}
 		body {
@@ -181,6 +181,7 @@
 			font-size: 7vw;
 			line-height: 8vw;
 			overflow: visible;
+			color: #08131C;
 		}
 		.row {
 			display: block;
@@ -323,7 +324,7 @@
 			<p style="color:#F21F1F;margin:0;"> art gallery<i>!</i></p>
 		</h1><br>
 		<h3>
-			Zara's graphite drawings. Check it out.
+			My drawings and stuff. Check it out.
 		</h3>
 	</div>
 	
