--- a/store.html
+++ b/store.html
@@ -152,7 +152,7 @@
 		display: flex;
 	}
 		/* responsive stuff */
-	@media screen and (max-width: 600px) {
+	@media screen and (max-width: 650px) {
 		html {
 		}
 		body {
@@ -181,6 +181,7 @@
 			font-size: 7vw;
 			line-height: 8vw;
 			overflow: visible;
+			color: #08131C;
 		}
 		.row {
 			display: block;
