--- a/contact.html
+++ b/contact.html
@@ -151,7 +151,7 @@
 		display: flex;
 	}
 		/* responsive stuff */
-	@media screen and (max-width: 600px) {
+	@media screen and (max-width: 650px) {
 		html {
 		}
 		body {
@@ -180,6 +180,7 @@
 			font-size: 7vw;
 			line-height: 8vw;
 			overflow: visible;
+			color: #08131C;
 		}
 		.row {
 			display: block;
