--- a/store.html
+++ b/store.html
@@ -284,14 +284,17 @@
 	
 	
 	
-	<div class="blue-bg">
 		<h1>Freeeeebies!</h1>
 		<br><h4>My digital creations available for free download!
 		<br><i style="opacity:0.7;font-size:0.8em">Everything provided here is meant for PERSONAL USE ONLY :&#41;</i></h4>
-	</div>
+
 		<h2>Posters</h2>
 		
-		
+		<div class="gallery">
+		<img src="artwork/BARBIE 2023.png" width="300px" alt="Barbie (2023)">
+		<div class="container">Barbie (2023)<br>
+		<div class="button"><a style="text-decoration:none;color:#f5f5f5;" href="https://drive.google.com/file/d/1cX3TVXmjZL2mFCleOUxCAYjyLoQsgZmg/view?usp=sharing" target="_blank">download PNG</a></div></div></div>	
+	
 		<div class="gallery">
 		<img src="artwork/Flashing Lights - Kanye West.png" width="300px" alt="Flashing Lights - Kanye West">
 		<div class="container">Flashing Lights - Kanye West<br>
